@@ -3,6 +3,7 @@ package functional_interface.examples;
 import java.util.Arrays;
 import java.util.List;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 /**
  * Representa uma função que aceita um argumento do tipo T e retorna um resultado do tipo R.
@@ -14,12 +15,13 @@ public class FunctionExample {
     List<Integer> numeros = Arrays.asList(1, 2, 3, 4, 5);
 
     // Usar a Function com expressão lambda para dobrar todos os números
+    // Passa como argumento o tipo da entrada e o tipo da saída
     Function<Integer, Integer> dobrar = numero -> numero * 2;
 
     // Usar a função para dobrar todos os números no Stream e armazená-los em outra lista
     List<Integer> numerosDobrados = numeros.stream()
         .map(n -> n * 2)
-        .toList();
+        .collect(Collectors.toList());
 
     // Imprimir a lista de números dobrados
     numerosDobrados.forEach(System.out::println);
