@@ -2,6 +2,7 @@ package functional_interface.examples;
 
 import java.util.List;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -14,11 +15,17 @@ public class SupplierExample {
     Supplier<String> saudacao = () -> "Olá, seja bem-vindo(a)!";
 
     // Usar o Supplier para obter uma lista com 5 saudações
-    List<String> listaSaudacoes = Stream.generate(saudacao)
+    // List<String> listaSaudacoes = Stream.generate(saudacao)
+    //     .limit(5)
+    //     .collect(Collectors.toList());
+
+    List<String> listaSaudacoes = Stream.generate(() -> "Olá, seja bem-vindo(a)!")
         .limit(5)
-        .toList();
+        .collect(Collectors.toList());
 
     // Imprimir as saudações geradas
     listaSaudacoes.forEach(System.out::println);
+
+    // listaSaudacoes.forEach(s -> System.out.println(s));
   }
 }
